--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,6 @@ override.tf.json
 # Ignore CLI configuration files
 .terraformrc
 terraform.rc
+
+# allow local env vars
+!/terraform/local/localstack.tfvars
